// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c-l0z5n4 soui-tag-tag c-ckg4a0 soui-tag-info c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="c-l0z5n4 soui-tag-tag c-55dacz soui-tag-danger c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="c-l0z5n4 soui-tag-tag c-mqswni soui-tag-warning c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="c-l0z5n4 soui-tag-tag c-16tk9z soui-tag-success c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-nerqf1 soui-tag-tangerine c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-rmr0ht soui-tag-magenta c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag cu8t0m soui-tag-purple c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-2l670k soui-tag-indigo c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckjq5v soui-tag-cyan c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckd3sw soui-tag-neon c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yetmk7 soui-tag-lemon c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yk37zo soui-tag-brown c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-nerqf1 soui-tag-tangerine c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-rmr0ht soui-tag-magenta c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag cu8t0m soui-tag-purple c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-2l670k soui-tag-indigo c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckjq5v soui-tag-cyan c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckd3sw soui-tag-neon c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yetmk7 soui-tag-lemon c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yk37zo soui-tag-brown c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-nerqf1 soui-tag-tangerine cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-rmr0ht soui-tag-magenta cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag cu8t0m soui-tag-purple cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-2l670k soui-tag-indigo cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckjq5v soui-tag-cyan cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckd3sw soui-tag-neon cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yetmk7 soui-tag-lemon cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yk37zo soui-tag-brown cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-nerqf1 soui-tag-tangerine c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-rmr0ht soui-tag-magenta c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag cu8t0m soui-tag-purple c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-2l670k soui-tag-indigo c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckjq5v soui-tag-cyan c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckd3sw soui-tag-neon c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yetmk7 soui-tag-lemon c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yk37zo soui-tag-brown c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckg4a0 soui-tag-info c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-55dacz soui-tag-danger c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-mqswni soui-tag-warning c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-16tk9z soui-tag-success c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckg4a0 soui-tag-info c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-55dacz soui-tag-danger c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-mqswni soui-tag-warning c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-16tk9z soui-tag-success c-cki4sz soui-tag-fill"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckg4a0 soui-tag-info cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-55dacz soui-tag-danger cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-mqswni soui-tag-warning cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-16tk9z soui-tag-success cbe7om0 soui-tag-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-ckg4a0 soui-tag-info c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-55dacz soui-tag-danger c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-mqswni soui-tag-warning c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-16tk9z soui-tag-success c1cypha soui-tag-bright-outline"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-yau7hf soui-tag-small c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yew2zz soui-tag-large c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yau7hf soui-tag-small c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-yew2zz soui-tag-large c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright c1gztba soui-tag-disabled"
    >
      <div
        class="c-eycf2v soui-tag-wrapper"
      >
        <span
          class="c-t1d6g9 soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="c-u85cyh soui-tag-close-icon"
      >
        <span
          class="cykf52k soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default cbe7om0 soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-eycf2v soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
  >
    <div
      class="c-eycf2v soui-tag-wrapper"
    >
      <span
        class="c-t1d6g9 soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="c-u85cyh soui-tag-close-icon"
    >
      <span
        class="cykf52k soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c-l0z5n4 soui-tag-tag c-ifeaf1 soui-tag-rounded c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
  >
    <span
      class="c-eycf2v soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
